--- a/svgtest.css
+++ b/svgtest.css
@@ -59,41 +59,47 @@
 }
 
 @keyframes fade {
-  0%, 65% {
-    opacity: 1
+  0%,65% {
+    opacity: 1;
+    z-index: 100;
   }
-
+65%,99% {
+  z-index: 100;
+}
   100% {
-    opacity: 0
+    opacity: 0;
+    z-index: -1;
   }
 }
 
-@keyframes zindex {
-  0% {
-    z-index: : 100
+/* The hourglass was flashing in the wrong spot before animating.
+this might be fixable by adjusting the actual inline svg animation path, but this is easier for now */
+@keyframes prevent-flash {
+  0%,99% {
+    visibility: hidden;
   }
-
-  1% {
-    z-index: : 0
-  }
-
-  100%{
-    z-index: 0
+  100% {
+    visibility: visible;
   }
 }
-
 
 .loaderWrapper {
   width: 100%;
   height: 100%;
+  opacity: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
+  background-color: blue;
+  animation: fade 5.5s linear;
+}
 
+.splash {
+  animation: prevent-flash .2s linear;
 }
 
 .elementToFadeInAndOut {
@@ -101,17 +107,6 @@
   animation: fade 5.5s linear;
   position: absolute;
 }
-
-
-.loaderWrapperDisappear {
-  opacity: 1;
-  animation: zindex 5.5s linear;
-  animation-delay: 5.5s;
-  z-index: 1000;
-}
-
-
-
 
 .sparkle1 {
   /* transform: scale(2.5); */
